--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,17 @@ footer {
 footer {
     color: var(--primary-text-color);
 }
+
+/* css для портфолио */
+
+.filter {
+    background: #F5F4FA;
+    color: var(--title-text-color);
+}
+.filter :hover {
+    background: var(--accent-color);
+    color: #FFFFFF;
+}
+.portfolio-title {
+    color: var(--title-text-color);
+}
