--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,21 @@
     --title-text-color: #212121;
     --accent-color: #2196F3;
 }
-
+a:-webkit-any-link {
+    cursor: default;
+    text-decoration: none;
+}
+ul {
+    list-style: none;
+}
 body {
     color:var(--primary-text-color);
     background-color: #ffffff;
     font-family: roboto, sans-serif;
     letter-spacing: 0.03em;
 }
+
+
 header {
     color: var(--primary-text-color);
     font-family: 'Roboto';
@@ -18,14 +26,18 @@ header {
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
-header > nav {
+
+.navigation-link {
     color: var(--title-text-color);
+    
+    
 }
-header > nav :hover, 
-header > nav :focus {
+.navigation :hover, 
+.navigation :focus {
     color: var(--accent-color);
 }
-.contacts {
+
+.contacts-link {
     color: var(--primary-text-color);
 }
 .contacts :hover,
@@ -107,14 +119,17 @@ footer {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71x;
+    line-height: 1.71;
     letter-spacing: 0.03em;
 }
 .contacts-footer {
     color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+    cursor: default;
 }
-.contacts-footer :hover, 
-.contacts-footer :focus {
+
+.list :hover, 
+.list :focus {
 color: var(--accent-color);
 }
 footer {
@@ -123,7 +138,7 @@ footer {
 
 /* css для портфолио */
 
-.filter {
+.filter-button {
     cursor: pointer;
     background: #F5F4FA;
     color: var(--title-text-color);
@@ -132,7 +147,8 @@ footer {
     line-height: 1.63;
     text-align: center;
 }
-.filter :hover {
+.filter :hover,
+.filter :focus {
     background: var(--accent-color);
     color: #FFFFFF;
 }
@@ -142,8 +158,11 @@ footer {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    cursor: default;
+    text-decoration: none;
 }
-p {
+.portfolio-text {
+    color: var(--primary-text-color);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.87;
