--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,12 @@ footer {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     cursor: default;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 .list :hover, 
