--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,28 @@ header {
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
+.logo {
+    font-family: 'Raleway';
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.19;
+        letter-spacing: 0.03em;
+        color: #2196F3;
+}
+.studio {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+.footer-studio {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #FFFFFF
+}
 
 .navigation-link {
     color: var(--title-text-color);
